--- a/DatingApp/appsettings.json
+++ b/DatingApp/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "AppSettings": {
+    "Token": "this is securitykey"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=datingapp.db"
   },
