--- a/DatingApp/appsettings.Development.json
+++ b/DatingApp/appsettings.Development.json
@@ -1,4 +1,10 @@
 {
+  "AppSettings": {
+    "Token": "this is securitykey"
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=datingapp.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Debug",
