--- a/DatingApp/DatingApp.csproj
+++ b/DatingApp/DatingApp.csproj
@@ -10,6 +10,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.0.0"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.0.0"/>
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="5.6.0"/>
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.6.0"/>
